tinyc/test/bad/struct-as-bool-or-r.c
struct s
{
    int x;
};

int main()
{
    struct s s;
    true || s;
    return 0;
}
